[package]
name = "tract_test"
version = "0.1.0"
edition = "2021"

[dependencies]
circular-buffer = "1.0.0"
clap = { version = "4.5.29", features = ["derive"] }
hound = "3.5.1"
# image = "0.25.5"
median = "0.3.2"
realfft = "3.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
strider = "0.1.3"
tract-onnx = "0.21.8"
